- reduced some z-index's to let admin_menu be shown correctly

--- a/sites/all/themes/goc/compass/sass/global/_goc-site.scss
+++ b/sites/all/themes/goc/compass/sass/global/_goc-site.scss
@@ -9,7 +9,7 @@ body {
   margin-right: auto;
   position: relative;
   width: 960px;
-  z-index: 1000;
+  z-index: 400;
 
   .pane-page-logo {
     text-align: right;
